# ft_ality42

./: .gitignore  README.md  dune-project  ft_ality.opam
grammars/: scorpion.grm
src/: dune  main.ml
